docs: reorganize README following Diátaxis; add COMPATIBILITY.md and docs/explanation.md
README slimmed to a front-door (~120 lines). Heavy content (benchmarks, testing
strategy, JNI comparison, design principles) moved to docs/explanation.md.
Encoding support table and S3 fixture status extracted to COMPATIBILITY.md.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>